attempts at fixing spacing orientation on page

--- a/recipe-app/src/Pages/HomePage/Home.css
+++ b/recipe-app/src/Pages/HomePage/Home.css
@@ -1,6 +1,10 @@
 .homepageFormatting{
     font-family: monospace;
 }
+.stockPhotos {
+    display: inline-flex;
+    top: -680px;;
+}
 .introText {
     font-family: monospace;
     display: flex;  
@@ -9,42 +13,43 @@
     text-align: center;
     height: 90vh;   
 }
-
-.stockPhotos {
-    top: -675px;
+.photoText{
+    justify-content: center;
+}
+img {
+    top: -900px;
     position: relative;
-}
-.chickPeas {
     max-width: 20%;
     max-height: 20%;
-    margin-left: 10%;
+    margin-left: 12%;
+
 }
-.ingredients {
-    max-width: 20%;
-    max-height: 20%;
-    margin-left: 10%;
-}
+
 .nutritonalHeading{
-    font-family: monospace;
-    margin-left: 14%;
+    justify-content: center;
+    margin-left: 17%;
 }
-.text-center-card__content{
+.card__content-inner{
     font-family: monospace;
     position: relative;
     justify-content: center;
-    top: -680px;
+    top: -880px;
 }
+
 .p2-card__description {
-    margin-left: 5%;
-    max-width: 30%;
-    font-size: 14px;
-    font-weight: 400;
-    line-height: 1.4;
-}
-p {
     text-align: center;
-    display: block;
-    font-weight: 400;
+    justify-content: center;
+    max-width: 25%;
+    margin-left: 10%;
+}
+
+
+p {
+
+    text-align: center;
+    display: inline-flex;
+    font-weight: 500;
+    font-size: 16px;
     margin-block-start: 1em;
     margin-block-end: 1em;
     margin-inline-start: 0px;
@@ -54,7 +59,7 @@ p {
 h4 {
     position: relative;
     text-transform: uppercase;
-    font-size: 14px;
+    font-size: 18px;
     font-weight: 800;
     letter-spacing: 1px;
     line-height: 1.2;
